# interactions

./: .gitignore  DESCRIPTION.md  README.md  input.txt  interactions_logic.py  pyproject.toml  setup.py
src/interactions/: cli.py  make_input_file.py
src/interactions/lib/: interactions_logic.py
tests/: test_interactions_logic.py  test_json_load.py
